--- a/SIGN_UP.html
+++ b/SIGN_UP.html
@@ -21,31 +21,31 @@
     <!-- main_container -->
 
     <section
-      class="md:w-[100%] md:h-[100vh] sm:w-[100%] sm:h-[100vh] w-[100%] h-[100vh] flex items-center justify-center"
+      class="md:w-[100%] md:h-[100vh] sm:w-[100%] sm:h-[100vh] w-[100%] h-[100vh] flex items-center justify-center border"
       style="background-color: rgba(0, 0, 0, 0.3)"
     >
       <div
-        class="md:w-[50%] md:h-[90vh] sm:w-[70%] sm:h-[80vh] w-[80%] h-[80vh] flex items-center justify-center rounded-[50px]"
+        class="md:w-[50%] md:h-[90vh] sm:w-[70%] sm:h-[80vh] w-[80%] h-[60vh] flex items-center justify-center rounded-[50px] border"
       >
         <!-- .. -->
 
         <!-- USER_SIGNIN-CREATE-ACCOUNT -->
 
         <div
-          class="md:w-[80%] md:h-[50vh] sm:w-[91%] sm:h-[50vh] w-[90%] h-[60vh] flex justify-around items-center flex-col sign_hold"
+          class="md:w-[80%] md:h-[50vh] sm:w-[91%] sm:h-[50vh] w-[90%] h-[400vh] flex justify-between items-center flex-col sign_hold border"
           style="backdrop-filter: blur(2px)"
         >
           <!-- .. -->
 
           <!-- USER_NAME_SIGN -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
           >
             <!-- .. -->
 
             <!-- USER_PROFILE_PHOTO -->
             <div
-              class="md:w-[2.6rem] md:h-[6vh] sm:w-[3rem] sm:h-[6vh] w-[3rem] h-[6vh] text-[#fff] text-[1.8rem] flex items-center justify-center border-r border-gray-400 bg-[#000] hover:cursor-pointer"
+              class="md:w-[2.6rem] md:h-[6vh] sm:w-[3rem] sm:h-[6vh] w-[3rem] h-[4vh] text-[#fff] text-[1.8rem] flex items-center justify-center border-r border-gray-400 bg-[#000] hover:cursor-pointer"
               style="background-color: rgba(0, 0, 0, 0.3)"
             >
               <i class="bi bi-person-fill"></i>
@@ -53,7 +53,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[18rem] md:h-[6vh] sm:w-[20rem] sm:h-[6vh] w-[18rem] h-[6vh] text-[#fff] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[18rem] md:h-[6vh] sm:w-[20rem] sm:h-[6vh] w-[18rem] h-[4vh] text-[#fff] font-serif text-sm pl-5 bg-[#000]"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Username"
@@ -65,13 +65,13 @@
           <!-- USER_PASSWORD_SIGN -->
 
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
           >
             <!-- .. -->
 
             <!-- USER_PROFILE_PHOTO -->
             <div
-              class="md:w-[2.6rem] md:h-[6vh] sm:w-[3rem] sm:h-[6vh] w-[3rem] h-[6vh] text-[#fff] text-[1.5rem] flex items-center justify-center border-r border-gray-400 bg-[#000] hover:cursor-pointer"
+              class="md:w-[2.6rem] md:h-[6vh] sm:w-[3rem] sm:h-[6vh] w-[3rem] h-[4vh] text-[#fff] text-[1.5rem] flex items-center justify-center border-r border-gray-400 bg-[#000] hover:cursor-pointer"
               style="background-color: rgba(0, 0, 0, 0.3)"
             >
               <i class="bi bi-lock"></i>
@@ -79,7 +79,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[18rem] md:h-[6vh] sm:w-[20rem] sm:h-[6vh] w-[18rem] h-[6vh] text-[#fff] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[18rem] md:h-[6vh] sm:w-[20rem] sm:h-[6vh] w-[18rem] h-[4vh] text-[#fff] font-serif text-sm pl-5 bg-[#000]"
               type="password"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="****"
@@ -90,14 +90,14 @@
 
           <!-- USER_ALTERNATIVE -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
           >
             <!-- .. -->
 
             <!-- USER_PROFILE_PHOTO -->
 
             <div
-              class="md:w-[2.6rem] md:h-[6vh] sm:w-[3rem] sm:h-[6vh] w-[3rem] h-[6vh] flex items-center justify-center text-[#fff] bg-[#000] border-r border-gray-400"
+              class="md:w-[2.6rem] md:h-[6vh] sm:w-[3rem] sm:h-[6vh] w-[3rem] h-[4vh] flex items-center justify-center text-[#fff] bg-[#000] border-r border-gray-400"
               style="background-color: rgba(0, 0, 0, 0.3)"
             >
               <i class="bi bi-google"></i>
@@ -106,7 +106,7 @@
             <!-- GOOGLE_LOGIN -->
 
             <a
-              class="md:w-[18rem] md:h-[6vh] sm:w-[20rem] sm:h-[6vh] w-[18rem] h-[6vh] flex items-center text-gray-400 text-xs font-serif pl-5 bg-[rgba(0,0,0,0.3)]"
+              class="md:w-[18rem] md:h-[6vh] sm:w-[20rem] sm:h-[6vh] w-[18rem] h-[4vh] flex items-center text-gray-400 text-xs font-serif pl-5 bg-[rgba(0,0,0,0.3)]"
               href="#"
               ><input type="button" value="Sign Up Using Google"
             /></a>
@@ -116,7 +116,7 @@
 
           <!-- WEB_REG -->
           <div
-            class="md:w-[100%] md:h-[6vh] sm:w-[100%] sm:h-[6vh] w-[100%] h-[6vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[6vh] sm:w-[100%] sm:h-[6vh] w-[100%] h-[5vh] flex items-center justify-center"
           >
             <div
               class="md:w-[17rem] md:h-[6vh] sm:w-[18rem] sm:h-[4vh] w-[14rem] h-[4vh] flex items-center justify-between"
@@ -141,11 +141,11 @@
 
           <!-- USER_LOGIN -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
           >
             <button
               type="submit"
-              class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] font-serif font-[600] bg-white hover:bg-opacity-40 hover:text-[#fff]"
+              class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif font-[600] bg-white hover:bg-opacity-40 hover:text-[#fff]"
             >
               Login
             </button>
@@ -155,7 +155,7 @@
 
           <!-- USER_REGISTER -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <a
               class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] flex items-center justify-center font-serif text-white font-[600] border-2 border-gray-400 bg-[rgba(0,0,0,0.3)] hover:border-none hover:bg-[rgba(0,0,0,0.5)]"
