--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- ---MAIN_HOLDER -->
     <main
-      class="md:w-[100%] md:h-[500vh] sm:w-[] sm:h-[] w-[] h-[] flex justify-start items-center flex-col"
+      class="md:w-[100%] md:h-[500vh] sm:w-[] sm:h-[] w-[] h-[] flex justify-start items-center flex-col border"
     >
       <!-- ---  -->
 
