--- a/REGISTER.html
+++ b/REGISTER.html
@@ -28,21 +28,21 @@
       style="background-color: rgba(0, 0, 0, 0.3)"
     >
       <div
-        class="md:w-[50%] md:h-[90vh] sm:w-[80%] sm:h-[90vh] w-[80%] h-[95vh] flex items-center justify-center rounded-[50px]"
+        class="md:w-[50%] md:h-[90vh] sm:w-[80%] sm:h-[90vh] w-[80%] h-[95vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px]"
       >
         <!-- .. -->
 
         <!-- USER_SIGNIN-CREATE-ACCOUNT -->
 
         <div
-          class="md:w-[80%] md:h-[70vh] sm:w-[60%] sm:h-[80vh] w-[90%] h-[75vh] flex justify-around items-center flex-col sign_hold"
+          class="md:w-[80%] md:h-[70vh] sm:w-[60%] sm:h-[80vh] w-[90%] h-[55vh] flex justify-around items-center flex-col sign_hold"
           style="backdrop-filter: blur(2px)"
         >
           <!-- .. -->
 
           <!-- USER_FIRST_NAME -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -50,7 +50,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] font-serif text-sm pl-5 bg-[#000] outline-none"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif text-sm pl-5 bg-[#000] outline-none"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="First Name"
@@ -62,7 +62,7 @@
           <!-- USER_SEC_NAME -->
 
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -70,7 +70,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif text-sm pl-5 bg-[#000]"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Last Name"
@@ -82,7 +82,7 @@
           <!-- USER_EMAIL -->
 
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -90,7 +90,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif text-sm pl-5 bg-[#000]"
               type="email"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Email"
@@ -102,7 +102,7 @@
           <!-- USER_PASSWORD_SIGN_1 -->
 
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -110,7 +110,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[6vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[4vh] font-serif text-sm pl-5 bg-[#000]"
               type="password"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Password"
@@ -122,7 +122,7 @@
           <!-- USER_PASSWORD_SIGN_2 -->
 
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -130,7 +130,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[6vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[4vh] font-serif text-sm pl-5 bg-[#000]"
               type="password"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Retype Password"
@@ -141,13 +141,13 @@
 
           <!-- USER_ALTERNATIVE -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[8vh] flex items-center justify-center"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
             <!-- USER_ENTER -->
             <a
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] flex items-center justify-between pr-5 pl-5 text-gray-400 font-serif text-sm bg-[rgba(0,0,0,.3)]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] flex items-center justify-between pr-5 pl-5 text-gray-400 font-serif text-sm bg-[rgba(0,0,0,.3)]"
               href="#"
               ><input type="button" value="Create Account Using Google " /><i
                 class="bi bi-google"
@@ -169,7 +169,7 @@
             class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[6vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <input
-              class="md:w-[19.8rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] font-serif font-[600] bg-white hover:bg-opacity-40 hover:text-[#fff]"
+              class="md:w-[19.8rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif font-[600] bg-white hover:bg-opacity-40 hover:text-[#fff]"
               type="submit"
               value="Submit"
             />
@@ -199,7 +199,7 @@
           <!-- BACK_BUTTON -->
 
           <div
-            class="md:w-[20rem] md:h-[6vh] sm:w-[100%] sm:h-[6vh] w-[100%] h-[6vh] flex items-center"
+            class="md:w-[20rem] md:h-[6vh] sm:w-[90%] sm:h-[6vh] w-[88%] h-[6vh] flex items-center"
           >
             <a
               class="text-xs text-white font-serif font-[600]"
