--- a/SIGN_UP.html
+++ b/SIGN_UP.html
@@ -21,25 +21,25 @@
     <!-- main_container -->
 
     <section
-      class="md:w-[100%] md:h-[100vh] sm:w-[100%] sm:h-[100vh] w-[100%] h-[100vh] flex items-center justify-center border"
+      class="md:w-[100%] md:h-[100vh] sm:w-[100%] sm:h-[100vh] w-[100%] h-[100vh] flex items-center justify-center"
       style="background-color: rgba(0, 0, 0, 0.3)"
     >
       <div
-        class="md:w-[50%] md:h-[90vh] sm:w-[70%] sm:h-[80vh] w-[80%] h-[60vh] flex items-center justify-center rounded-[50px] border"
+        class="md:w-[50%] md:h-[90vh] sm:w-[70%] sm:h-[80vh] w-[80%] h-[60vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px]"
       >
         <!-- .. -->
 
         <!-- USER_SIGNIN-CREATE-ACCOUNT -->
 
         <div
-          class="md:w-[80%] md:h-[50vh] sm:w-[91%] sm:h-[50vh] w-[90%] h-[400vh] flex justify-between items-center flex-col sign_hold border"
+          class="md:w-[80%] md:h-[50vh] sm:w-[91%] sm:h-[50vh] w-[90%] h-[40vh] flex justify-between items-center flex-col sign_hold"
           style="backdrop-filter: blur(2px)"
         >
           <!-- .. -->
 
           <!-- USER_NAME_SIGN -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -65,7 +65,7 @@
           <!-- USER_PASSWORD_SIGN -->
 
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -90,7 +90,7 @@
 
           <!-- USER_ALTERNATIVE -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <!-- .. -->
 
@@ -141,11 +141,11 @@
 
           <!-- USER_LOGIN -->
           <div
-            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center border"
+            class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[4vh] flex items-center justify-center"
           >
             <button
               type="submit"
-              class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif font-[600] bg-white hover:bg-opacity-40 hover:text-[#fff]"
+              class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif font-[400] bg-white hover:bg-opacity-40 hover:text-[#fff]"
             >
               Login
             </button>
@@ -158,7 +158,7 @@
             class="md:w-[100%] md:h-[8vh] sm:w-[100%] sm:h-[8vh] w-[100%] h-[6vh] flex items-center justify-center"
           >
             <a
-              class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] flex items-center justify-center font-serif text-white font-[600] border-2 border-gray-400 bg-[rgba(0,0,0,0.3)] hover:border-none hover:bg-[rgba(0,0,0,0.5)]"
+              class="md:w-[20.6rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[6vh] flex items-center justify-center font-serif text-white font-[400] border-2 border-gray-400 bg-[rgba(0,0,0,0.3)] hover:border-none hover:bg-[rgba(0,0,0,0.5)]"
               href=".//REGISTER.html"
             >
               <input type="button" value="Register" />
