--- a/REGISTER.html
+++ b/REGISTER.html
@@ -28,14 +28,14 @@
       style="background-color: rgba(0, 0, 0, 0.3)"
     >
       <div
-        class="md:w-[50%] md:h-[90vh] sm:w-[80%] sm:h-[90vh] w-[80%] h-[95vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px]"
+        class="md:w-[50%] md:h-[90vh] sm:w-[80%] sm:h-[90vh] w-[80%] h-[60vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px] border"
       >
         <!-- .. -->
 
         <!-- USER_SIGNIN-CREATE-ACCOUNT -->
 
         <div
-          class="md:w-[80%] md:h-[70vh] sm:w-[60%] sm:h-[80vh] w-[90%] h-[55vh] flex justify-around items-center flex-col sign_hold"
+          class="md:w-[80%] md:h-[70vh] sm:w-[60%] sm:h-[80vh] w-[90%] h-[55vh] flex justify-around items-center flex-col sign_hold border"
           style="backdrop-filter: blur(2px)"
         >
           <!-- .. -->
