--- a/SIGN_UP.html
+++ b/SIGN_UP.html
@@ -25,14 +25,14 @@
       style="background-color: rgba(0, 0, 0, 0.3)"
     >
       <div
-        class="md:w-[50%] md:h-[90vh] sm:w-[70%] sm:h-[80vh] w-[80%] h-[60vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px]"
+        class="md:w-[50%] md:h-[90vh] sm:w-[70%] sm:h-[80vh] w-[80%] h-[60vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px] border"
       >
         <!-- .. -->
 
         <!-- USER_SIGNIN-CREATE-ACCOUNT -->
 
         <div
-          class="md:w-[80%] md:h-[50vh] sm:w-[91%] sm:h-[50vh] w-[90%] h-[40vh] flex justify-between items-center flex-col sign_hold"
+          class="md:w-[80%] md:h-[50vh] sm:w-[91%] sm:h-[50vh] w-[90%] h-[40vh] flex justify-between items-center flex-col sign_hold border"
           style="backdrop-filter: blur(2px)"
         >
           <!-- .. -->
