--- a/REGISTER.html
+++ b/REGISTER.html
@@ -28,14 +28,14 @@
       style="background-color: rgba(0, 0, 0, 0.3)"
     >
       <div
-        class="md:w-[50%] md:h-[90vh] sm:w-[80%] sm:h-[90vh] w-[80%] h-[60vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px] border"
+        class="md:w-[50%] md:h-[90vh] sm:w-[80%] sm:h-[90vh] w-[80%] h-[80vh] flex md:items-center sm:items-center items-start justify-center rounded-[50px]"
       >
         <!-- .. -->
 
         <!-- USER_SIGNIN-CREATE-ACCOUNT -->
 
         <div
-          class="md:w-[80%] md:h-[70vh] sm:w-[60%] sm:h-[80vh] w-[90%] h-[55vh] flex justify-around items-center flex-col sign_hold border"
+          class="md:w-[80%] md:h-[70vh] sm:w-[60%] sm:h-[80vh] w-[90%] h-[55vh] flex justify-around items-center flex-col sign_hold"
           style="backdrop-filter: blur(2px)"
         >
           <!-- .. -->
@@ -50,7 +50,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif text-sm pl-5 bg-[#000] outline-none"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000] outline-none"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="First Name"
@@ -70,7 +70,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000]"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Last Name"
@@ -90,7 +90,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[4vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000]"
               type="email"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Email"
@@ -110,7 +110,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[4vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[5vh] font-serif text-sm pl-5 bg-[#000]"
               type="password"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Password"
@@ -130,7 +130,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[4vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] text-white h-[5vh] font-serif text-sm pl-5 bg-[#000]"
               type="password"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Retype Password"
