--- a/REGISTER.html
+++ b/REGISTER.html
@@ -50,7 +50,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000] outline-none"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000] text-[#fff] outline-none"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="First Name"
@@ -70,7 +70,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000] text-[#fff]"
               type="text"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Last Name"
@@ -90,7 +90,7 @@
 
             <!-- USER_ENTER -->
             <input
-              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000]"
+              class="md:w-[20rem] md:h-[6vh] sm:w-[23rem] sm:h-[6vh] w-[21rem] h-[5vh] font-serif text-sm pl-5 bg-[#000] text-[#fff]"
               type="email"
               style="background-color: rgba(0, 0, 0, 0.3)"
               placeholder="Email"
